Istio-Playground/Egress/virtual-service-httpbin.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin-ext
spec:
  hosts:
  - httpbin.org
  http:
  - timeout: 2s
    route:
    - destination:
        host: httpbin.org
      weight: 100
